vlib/v/parser/tests/chan_no_type_option_err.out
vlib/v/parser/tests/chan_no_type_option_err.vv:1:17: error: `chan` has no type specified. Use `chan Type` instead of `chan`
    1 | fn takes_opt(c ?chan) {}
      |                 ~~~~
