vlib/v/parser/tests/chan_no_type_option_err.vv
fn takes_opt(c ?chan) {}
